[tool.poetry]
name = "hotel_reservation"
version = "0.0.1"
description = "A short description of the project."
authors = [ "Saurabh Gupta <saurabh.gupta@getmyparking.com>" ]

readme = "README.md"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["hotel_reservation"]
force_sort_within_sections = true


[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^4.1.0"
pandas = "^2.2.3"
numpy = "^2.2.3"
pylint = "^3.3.5"
dvc = "^3.59.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
