[tool.poetry]
name = "hotel_reservation"
version = "0.0.1"
description = "A short description of the project."
authors = [ "Saurabh Gupta <saurabh.gupta@getmyparking.com>" ]

readme = "README.md"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["hotel_reservation"]
force_sort_within_sections = true


[tool.poetry.dependencies]
python = "^3.10,<3.13"
pre-commit = "^4.1.0"
pandas = "^2.2.3"
numpy = ">=1.16.0,<2.2"
pylint = "^3.3.5"
dvc = "^3.59.1"
omegaconf = "^2.3.0"
google-cloud-storage = "^3.1.0"
matplotlib = ">=3.5,<=3.10"
seaborn = "^0.13.2"
ydata-profiling = "^4.14.0"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
